; ModuleID = '/home/carl/AnghaBench/tengine/src/core/extr_ngx_list.c_ngx_list_create.c'
source_filename = "/home/carl/AnghaBench/tengine/src/core/extr_ngx_list.c_ngx_list_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NGX_OK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ngx_list_create(i32* %0, i32 %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = call i32* @ngx_palloc(i32* %9, i32 4)
  store i32* %10, i32** %8, align 8
  %11 = load i32*, i32** %8, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  br label %25

14:                                               ; preds = %3
  %15 = load i32*, i32** %8, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = load i32, i32* %6, align 4
  %18 = load i64, i64* %7, align 8
  %19 = call i64 @ngx_list_init(i32* %15, i32* %16, i32 %17, i64 %18)
  %20 = load i64, i64* @NGX_OK, align 8
  %21 = icmp ne i64 %19, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %14
  store i32* null, i32** %4, align 8
  br label %25

23:                                               ; preds = %14
  %24 = load i32*, i32** %8, align 8
  store i32* %24, i32** %4, align 8
  br label %25

25:                                               ; preds = %23, %22, %13
  %26 = load i32*, i32** %4, align 8
  ret i32* %26
}

declare dso_local i32* @ngx_palloc(i32*, i32) #1

declare dso_local i64 @ngx_list_init(i32*, i32*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
